# internal/app/domain/model/order.go
@@ -4,12 +4,9 @@ import (
 	"strconv"
 	"time"
 
+	"github.com/ShiraazMoollatjie/goluhn"
 	"github.com/google/uuid"
-)
-
-const (
-	LuhnMod       = 2
-	LuhnThreshold = 9
+	"github.com/shopspring/decimal"
 )
 
 type Status string
@@ -31,20 +28,26 @@ func (s Status) Valid() bool {
 }
 
 type Order struct {
-	ID        int64     `json:"order_id"`
-	UserID    uuid.UUID `json:"user_id"`
-	Status    Status    `json:"status"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
+	ID             int64           `json:"order_id"`
+	UserID         uuid.UUID       `json:"user_id"`
+	Status         Status          `json:"status"`
+	Accrual        decimal.Decimal `json:"accrual"`
+	CreatedAt      time.Time       `json:"created_at"`
+	UpdatedAt      time.Time       `json:"-"`
+	CreatedAtEpoch int64           `json:"-"`
 }
 
 func NewOrder(id int64, userID uuid.UUID) *Order {
+	t := time.Now().UTC()
+
 	return &Order{
-		ID:        id,
-		UserID:    userID,
-		Status:    StatusNew,
-		CreatedAt: time.Now(),
-		UpdatedAt: time.Now(),
+		ID:             id,
+		UserID:         userID,
+		Status:         StatusNew,
+		Accrual:        decimal.Zero,
+		CreatedAt:      t,
+		UpdatedAt:      t,
+		CreatedAtEpoch: t.UnixNano(),
 	}
 }
 
@@ -52,24 +55,8 @@ func (ord *Order) CreatedAtUnix() int64 {
 	return ord.CreatedAt.UnixNano()
 }
 
-func (ord *Order) checkLuhn() bool {
-	parity := int(ord.ID % LuhnMod)
-	idStr := strconv.FormatInt(ord.ID, 10)
-	sum := 0
+func (ord *Order) CheckLuhn() bool {
+	err := goluhn.Validate(strconv.FormatInt(ord.ID, 10))
 
-	for i, digitRune := range idStr {
-		mod := LuhnMod
-		digit, _ := strconv.Atoi(string(digitRune))
-
-		if i%mod == parity {
-			digit *= mod
-			if digit > LuhnThreshold {
-				digit -= LuhnThreshold
-			}
-		}
-
-		sum += digit
-	}
-
-	return sum%10 == 0
+	return err == nil
 }
